crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/v8intrinsic.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: v8intrinsic.js

---
# Input
```js
// https://github.com/babel/babel/pull/10148

%DebugPrint(foo);


// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/in-bind-expression/options.json
// ::%DebugPrint(null)

// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/in-member-expression/options.json
// a.%DebugPrint();

// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/not-in-call-expression/options.json
// const i = %DebugPrint;
// i(foo);

// https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/not-in-call-expression/options.json
// %DebugPrint?.(null)

new %DebugPrint(null);

function *foo() {
  yield %StringParseInt("42", 10)
}

foo%bar()

```

# Output
```js
// https://github.com/babel/babel/pull/10148

%DebugPrint(foo)

// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/in-bind-expression/options.json
// ::%DebugPrint(null)

// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/in-member-expression/options.json
// a.%DebugPrint();

// Invalid code https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/not-in-call-expression/options.json
// const i = %DebugPrint;
// i(foo);

// https://github.com/JLHwung/babel/blob/c1a3cbfd65e08b7013fd6f8c62add8cb10b4b169/packages/babel-parser/test/fixtures/v8intrinsic/_errors/not-in-call-expression/options.json
// %DebugPrint?.(null)

new %DebugPrint(null);

function* foo() {
  yield;
  %StringParseInt("42", 10)
}

foo % bar();

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '%DebugPrint(foo)'
  ┌─ v8intrinsic.js:3:1
  │
3 │ %DebugPrint(foo);
  │ ^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected an expression but instead found '%'
   ┌─ v8intrinsic.js:19:5
   │
19 │ new %DebugPrint(null);
   │     ^ Expected an expression here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ v8intrinsic.js:22:9
   │
22 │   yield %StringParseInt("42", 10)
   │   ------^
   │   │     │
   │   │     An explicit or implicit semicolon is expected here...
   │   ...Which is required to end this statement


```


